# pre-commit-run-hook-entry

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  LICENSE  Makefile  README.rst  pre-commit-run-hook-entry.sublime-project  pre_commit_run_hook_entry.py  pyproject.toml  pytest.ini  python.mk  tests.py
.github/: dependabot.yml
.github/actions/install_badabump/: action.yml
.github/actions/install_python_and_poetry/: action.yml
.github/actions/run_pre_commit/: action.yml
.github/actions/run_tox/: action.yml
.github/workflows/: ci.yml  ci_package.yml  ci_release.yml  release_pr.yml  release_tag.yml
src/pre_commit_run_hook_entry/: __init__.py  __main__.py  annotations.py  cli.py  hooks.py
tests/: conftest.py  test_cli.py  test_hooks.py
tests/cli/: test_pre_commit_run_black_entry.py  test_pre_commit_run_hook_entry.py  test_pre_commit_which_hook_entry.py
tests/unit/: test_cli.py
