[tool.black]
line_length = 79

[tool.coverage.run]
branch = true
source = ["pre_commit_run_hook_entry"]

[tool.coverage.paths]
source = ["pre_commit_run_hook_entry.py"]

[tool.coverage.report]
fail_under = 85
skip_covered = true
show_missing = true

[tool.poetry]
name = "pre-commit-run-hook-entry"
version = "1.0.0a3"
description = "Run pre-commit hook entry. Allow to run pre-commit hooks for text editor formatting / linting needs"
authors = ["Igor Davydenko <iam@igordavydenko.com>"]
license = "BSD-3-Clause"
readme = "README.rst"
homepage = "https://igordavydenko.com/projects/#pre-commit-run-hook-entry"
repository = "https://github.com/playpauseandstop/pre-commit-run-hook-entry"
keywords = ["pre-commit", "pre-commit hook", "vscode", "sublime-text3"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Plugins",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Utilities",
  "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.7"
pre-commit = "^2.7.1"

[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = "^5.3"}
pytest = "^7.1.2"
pytest-cov = "^2.9.0"

[tool.poetry.scripts]
pre-commit-run-black-entry = "pre_commit_run_hook_entry:main_black"
pre-commit-run-hook-entry = "pre_commit_run_hook_entry:main"
pre-commit-which-hook-entry = "pre_commit_run_hook_entry:main_which"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/playpauseandstop/pre-commit-run-hook-entry/issues"

[tool.pytest.ini_options]
addopts = "--cov --no-cov-on-fail"
python_files = "tests.py"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
