[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.badabump]
version_type = "semver"

[tool.black]
line_length = 79
target_version = ["py39"]

[tool.coverage.run]
branch = true
source = ["pre_commit_run_hook_entry"]

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "@overload",
]
omit = [
  "src/*/__main__.py",
  "src/*/annotations.py",
]
fail_under = 95
skip_covered = true
show_missing = true

[tool.isort]
profile = "attrs"
combine_as_imports = true
force_alphabetical_sort_within_sections = true
lines_between_types = 0
src_paths = ["src/"]
virtual_env = ".venv/"

[tool.mypy]
allow_untyped_globals = true
check_untyped_defs = true
disallow_any_decorated = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
exclude = ["docs/", "migrations/", "tests/"]
follow_imports = "normal"
follow_imports_for_stubs = true
ignore_missing_imports = false
mypy_path = "src/"
namespace_packages = true
no_implicit_optional = true
python_executable = ".venv/bin/python3"
show_column_numbers = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

# Local mypy config
[[tool.mypy.overrides]]
module = [
  "pre_commit.*",
]
ignore_missing_imports = true

[tool.poetry]
name = "pre-commit-run-hook-entry"
version = "1.0.0rc0"
description = "Run pre-commit hook entry. Allow to run pre-commit hooks for text editor formatting / linting needs"
authors = ["Igor Davydenko <iam@igordavydenko.com>"]
license = "BSD-3-Clause"
readme = "README.rst"
homepage = "https://igordavydenko.com/projects/#pre-commit-run-hook-entry"
repository = "https://github.com/playpauseandstop/pre-commit-run-hook-entry"
keywords = ["pre-commit", "pre-commit hook", "vscode", "sublime-text3"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Plugins",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Utilities",
  "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = ">=4.0.0,<5.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.18.1"
mypy = "^1.14.0"

[tool.poetry.group.test.dependencies]
coverage = "^6.5.0"
coveralls = "^3.3.1"
pytest = "^8.3.4"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]
pre-commit-run-black-entry = "pre_commit_run_hook_entry.cli:main_black"
pre-commit-run-hook-entry = "pre_commit_run_hook_entry.cli:main"
pre-commit-which-hook-entry = "pre_commit_run_hook_entry.cli:main_which"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/playpauseandstop/pre-commit-run-hook-entry/issues"

[tool.pytest.ini_options]
minversion = "8.3.4"
testpaths = ["tests/"]
addopts = "--cov --no-cov-on-fail"
log_level = "info"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py312,py312-minimum-requirements
skipsdist = True

[gh-actions]
python =
  3.11: py311

[testenv]
allowlist_externals =
  poetry
passenv =
  PYTEST_ADDOPTS
skip_install = True
commands_pre =
  poetry install --only main,test
commands =
  python3 -m pytest

[testenv:py312-minimum-requirements]
commands_pre =
  poetry install --only main,test
  poetry run python3 -m pip install pre-commit==4.0.0
"""
